[package]
name = "bittorrent-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bt_bencode = "0.7.0"
http = "0.2.8"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_with = "2.1.0"
sha1 = "0.10.5"
url = "2.3.1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]