[package]
name = "bittorrent-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bt_bencode = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_with = "2.1.0"
sha1 = "0.10.5"
urlencoding = "2.1.2"
